docs/paper-trades/v5/2026-05-14_report.md
# v5 Paper Trading Report -- 2026-05-14

## Summary

| Metric | Value |
|--------|-------|
| Engine | v5 multi-pool |
| Capital | Rs 10.00L |
| Regime | BEAR |
| **Net P&L** | **Rs -890 (-0.09%)** |
| Trades | 68 (L:13 S:55) |
| Win Rate | 41% |

## Trades

| # | Type | Pool | Stock | Entry | Exit | P&L | Reason |
|---|------|------|-------|-------|------|-----|--------|
| 1 | SHORT | INTRADAY | TVSMOTOR | 3423.00 | 3443.80 | Rs -62 | STOPLOSS |
| 2 | SHORT | INTRADAY | LENSKART | 471.40 | 474.40 | Rs -57 | STOPLOSS |
| 3 | SHORT | INTRADAY | OBEROIRLTY | 1601.60 | 1609.90 | Rs -50 | STOPLOSS |
| 4 | SHORT | INTRADAY | INDIGO | 4206.60 | 4230.60 | Rs -48 | STOPLOSS |
| 5 | SHORT | INTRADAY | CHOLAFIN | 1555.00 | 1567.70 | Rs -76 | STOPLOSS |
| 6 | SHORT | INTRADAY | PHOENIXLTD | 1716.20 | 1736.20 | Rs -120 | STOPLOSS |
| 7 | SHORT | INTRADAY | HUDCO | 216.32 | 217.82 | Rs -51 | STOPLOSS |
| 8 | SHORT | INTRADAY | KPITTECH | 698.90 | 702.85 | Rs -122 | STOPLOSS |
| 9 | SHORT | INTRADAY | IOC | 139.67 | 140.38 | Rs -95 | STOPLOSS |
| 10 | SHORT | INTRADAY | HEROMOTOCO | 4935.00 | 4960.50 | Rs -51 | STOPLOSS |
| 11 | SHORT | INTRADAY | BDL | 1342.80 | 1353.30 | Rs -63 | STOPLOSS |
| 12 | SHORT | INTRADAY | RECLTD | 343.30 | 345.40 | Rs -48 | STOPLOSS |
| 13 | SHORT | INTRADAY | WAAREEENER | 3051.30 | 3072.50 | Rs -106 | STOPLOSS |
| 14 | SHORT | INTRADAY | GVT&D | 4277.90 | 4310.10 | Rs -97 | STOPLOSS |
| 15 | SHORT | INTRADAY | CGPOWER | 836.60 | 843.00 | Rs -26 | STOPLOSS |
| 16 | SHORT | INTRADAY | HCLTECH | 1120.40 | 1111.90 | Rs +144 | STOPLOSS |
| 17 | SHORT | INTRADAY | TATAELXSI | 3982.00 | 4018.00 | Rs -72 | STOPLOSS |
| 18 | SHORT | INTRADAY | MPHASIS | 2086.00 | 2097.00 | Rs -11 | STOPLOSS |
| 19 | SHORT | INTRADAY | VMM | 117.09 | 118.77 | Rs -52 | STOPLOSS |
| 20 | SHORT | INTRADAY | TECHM | 1348.40 | 1338.70 | Rs +116 | STOPLOSS |
| 21 | SHORT | INTRADAY | INFY | 1106.00 | 1095.80 | Rs +133 | STOPLOSS |
| 22 | SHORT | INTRADAY | TVSMOTOR | 3427.70 | 3437.10 | Rs -19 | FLAT_FORCE_EXIT |
| 23 | SHORT | INTRADAY | COFORGE | 1262.20 | 1270.30 | Rs -57 | STOPLOSS |
| 24 | SHORT | INTRADAY | GODREJCP | 1025.00 | 1031.40 | Rs -26 | STOPLOSS |
| 25 | SHORT | INTRADAY | NESTLEIND | 1460.50 | 1460.30 | Rs +0 | FLAT_FORCE_EXIT |
| 26 | SHORT | INTRADAY | ICICIAMC | 3220.00 | 3214.50 | Rs +6 | FLAT_FORCE_EXIT |
| 27 | SHORT | INTRADAY | SBICARD | 623.15 | 632.10 | Rs -54 | STOPLOSS |
| 28 | SHORT | INTRADAY | CGPOWER | 841.55 | 841.45 | Rs +0 | FLAT_FORCE_EXIT |
| 29 | SHORT | INTRADAY | SAIL | 200.28 | 200.37 | Rs -2 | FLAT_FORCE_EXIT |
| 30 | SHORT | INTRADAY | HCLTECH | 1112.10 | 1125.40 | Rs -40 | STOPLOSS |
| 31 | SHORT | INTRADAY | LTM | 3960.80 | 3958.60 | Rs +2 | FLAT_FORCE_EXIT |
| 32 | SHORT | INTRADAY | VMM | 118.66 | 113.00 | Rs +187 | TARGET |
| 33 | SHORT | INTRADAY | TIINDIA | 2841.30 | 2784.00 | Rs +57 | TARGET |
| 34 | SHORT | INTRADAY | WAAREEENER | 3062.00 | 3066.00 | Rs -4 | FLAT_FORCE_EXIT |
| 35 | SHORT | INTRADAY | SAIL | 199.95 | 199.95 | Rs +0 | FLAT_FORCE_EXIT |
| 36 | SHORT | INTRADAY | TECHM | 1339.30 | 1342.20 | Rs -9 | FLAT_FORCE_EXIT |
| 37 | SHORT | INTRADAY | NESTLEIND | 1460.40 | 1457.60 | Rs +8 | FLAT_FORCE_EXIT |
| 38 | SHORT | INTRADAY | ICICIAMC | 3214.50 | 3212.80 | Rs +2 | FLAT_FORCE_EXIT |
| 39 | SHORT | INTRADAY | LTM | 3964.90 | 3962.30 | Rs +3 | FLAT_FORCE_EXIT |
| 40 | SHORT | INTRADAY | PERSISTENT | 4626.00 | 4663.00 | Rs -37 | STOPLOSS |
| 41 | SHORT | INTRADAY | INFY | 1096.10 | 1097.40 | Rs -5 | FLAT_FORCE_EXIT |
| 42 | SHORT | INTRADAY | VMM | 112.98 | 115.79 | Rs -118 | STOPLOSS |
| 43 | SHORT | INTRADAY | LTM | 3978.30 | 3927.90 | Rs +50 | TIME_EXIT |
| 44 | SHORT | INTRADAY | SAIL | 199.51 | 199.02 | Rs +13 | TIME_EXIT |
| 45 | SHORT | INTRADAY | NESTLEIND | 1456.80 | 1460.00 | Rs -10 | TIME_EXIT |
| 46 | SHORT | INTRADAY | HINDUNILVR | 2250.90 | 2247.60 | Rs +7 | TIME_EXIT |
| 47 | SHORT | INTRADAY | INFY | 1097.60 | 1094.50 | Rs +12 | TIME_EXIT |
| 48 | SHORT | INTRADAY | TIINDIA | 2807.50 | 2802.20 | Rs +5 | TIME_EXIT |
| 49 | SHORT | INTRADAY | GAIL | 162.36 | 162.47 | Rs -3 | TIME_EXIT |
| 50 | SHORT | INTRADAY | PERSISTENT | 4662.60 | 4629.50 | Rs +33 | TIME_EXIT |
| 51 | SHORT | INTRADAY | IRFC | 100.44 | 100.21 | Rs +11 | TIME_EXIT |
| 52 | SHORT | INTRADAY | COALINDIA | 454.90 | 454.35 | Rs +6 | TIME_EXIT |
| 53 | SHORT | INTRADAY | TATACONSUM | 1227.50 | 1227.80 | Rs -1 | TIME_EXIT |
| 54 | SHORT | INTRADAY | LICHSGFIN | 560.00 | 561.55 | Rs -12 | TIME_EXIT |
| 55 | SHORT | INTRADAY | TECHM | 1343.10 | 1342.20 | Rs +3 | TIME_EXIT |
| 56 | LONG | SWING | NYKAA | 272.20 | 270.60 | Rs -78 | SIGNAL_FLIP |
| 57 | LONG | SWING | NATIONALUM | 419.30 | 414.10 | Rs -151 | SIGNAL_FLIP |
| 58 | LONG | SWING | ADANIGREEN | 1376.80 | 1387.20 | Rs +31 | STOPLOSS |
| 59 | LONG | SWING | VEDL | 334.00 | 333.15 | Rs -37 | SIGNAL_FLIP |
| 60 | LONG | SWING | MFSL | 1625.00 | 1628.30 | Rs +23 | SIGNAL_FLIP |
| 61 | LONG | SWING | SOLARINDS | 16333.00 | 16221.00 | Rs -112 | STOPLOSS |
| 62 | LONG | SWING | ADANIENT | 2621.00 | 2668.50 | Rs +238 | STOPLOSS |
| 63 | LONG | SWING | MCX | 3331.20 | 3332.60 | Rs +1 | FLAT_FORCE_EXIT |
| 64 | LONG | SWING | CIPLA | 1439.00 | 1440.10 | Rs +2 | FLAT_FORCE_EXIT |
| 65 | LONG | SWING | ZYDUSLIFE | 993.80 | 993.45 | Rs -1 | FLAT_FORCE_EXIT |
| 66 | LONG | SWING | HDFCBANK | 776.35 | 776.45 | Rs +0 | FLAT_FORCE_EXIT |
| 67 | LONG | SWING | SIEMENS | 3694.70 | 3690.00 | Rs -5 | SIGNAL_FLIP |
| 68 | LONG | SWING | ETERNAL | 245.30 | 245.44 | Rs +2 | SIGNAL_FLIP |