docs/paper-trades/v6/2026-05-14_report.md
# v5 Paper Trading Report -- 2026-05-14

## Summary

| Metric | Value |
|--------|-------|
| Engine | v5 multi-pool |
| Capital | Rs 10.00L |
| Regime | BEAR |
| **Net P&L** | **Rs -721 (-0.07%)** |
| Trades | 44 (L:8 S:36) |
| Win Rate | 48% |

## Trades

| # | Type | Pool | Stock | Entry | Exit | P&L | Reason |
|---|------|------|-------|-------|------|-----|--------|
| 1 | SHORT | INTRADAY | OBEROIRLTY | 1601.60 | 1634.80 | Rs -199 | STOPLOSS |
| 2 | SHORT | INTRADAY | PHOENIXLTD | 1716.60 | 1751.80 | Rs -211 | STOPLOSS |
| 3 | SHORT | INTRADAY | INDIGO | 4206.40 | 4292.00 | Rs -171 | STOPLOSS |
| 4 | SHORT | INTRADAY | HCLTECH | 1120.10 | 1111.90 | Rs +156 | STOPLOSS |
| 5 | SHORT | INTRADAY | KPITTECH | 698.40 | 712.40 | Rs -364 | STOPLOSS |
| 6 | SHORT | INTRADAY | TECHM | 1348.40 | 1338.70 | Rs +116 | STOPLOSS |
| 7 | SHORT | INTRADAY | INFY | 1106.00 | 1095.70 | Rs +124 | STOPLOSS |
| 8 | SHORT | INTRADAY | BLUESTARCO | 1610.00 | 1652.00 | Rs -210 | STOPLOSS |
| 9 | SHORT | INTRADAY | CGPOWER | 841.55 | 841.45 | Rs +1 | FLAT_FORCE_EXIT |
| 10 | SHORT | INTRADAY | GODREJCP | 1025.00 | 1026.80 | Rs -14 | FLAT_FORCE_EXIT |
| 11 | SHORT | INTRADAY | MPHASIS | 2086.00 | 2131.20 | Rs -136 | STOPLOSS |
| 12 | SHORT | INTRADAY | SAIL | 199.95 | 199.95 | Rs +0 | FLAT_FORCE_EXIT |
| 13 | SHORT | INTRADAY | TECHM | 1339.30 | 1342.20 | Rs -23 | FLAT_FORCE_EXIT |
| 14 | SHORT | INTRADAY | NESTLEIND | 1460.40 | 1457.60 | Rs +20 | FLAT_FORCE_EXIT |
| 15 | SHORT | INTRADAY | ICICIAMC | 3214.50 | 3212.80 | Rs +5 | FLAT_FORCE_EXIT |
| 16 | SHORT | INTRADAY | LTM | 3964.90 | 3962.30 | Rs +5 | FLAT_FORCE_EXIT |
| 17 | SHORT | INTRADAY | HEROMOTOCO | 4934.50 | 5053.50 | Rs -238 | STOPLOSS |
| 18 | SHORT | INTRADAY | IOC | 139.67 | 140.25 | Rs -84 | TIME_EXIT |
| 19 | SHORT | INTRADAY | WAAREEENER | 3051.30 | 3069.90 | Rs -93 | TIME_EXIT |
| 20 | SHORT | INTRADAY | GVT&D | 4277.90 | 4344.20 | Rs -199 | TIME_EXIT |
| 21 | SHORT | INTRADAY | TVSMOTOR | 3421.00 | 3463.80 | Rs -128 | TIME_EXIT |
| 22 | SHORT | INTRADAY | TATAELXSI | 3982.00 | 4027.40 | Rs -91 | TIME_EXIT |
| 23 | SHORT | INTRADAY | LENSKART | 471.40 | 474.05 | Rs -50 | TIME_EXIT |
| 24 | SHORT | INTRADAY | COROMANDEL | 1846.20 | 1863.10 | Rs -68 | TIME_EXIT |
| 25 | SHORT | INTRADAY | GAIL | 162.04 | 162.47 | Rs -21 | TIME_EXIT |
| 26 | SHORT | INTRADAY | HCLTECH | 1112.70 | 1122.10 | Rs -66 | TIME_EXIT |
| 27 | SHORT | INTRADAY | LTM | 3978.40 | 3927.90 | Rs +152 | TIME_EXIT |
| 28 | SHORT | INTRADAY | SAIL | 199.75 | 199.02 | Rs +50 | TIME_EXIT |
| 29 | SHORT | INTRADAY | VMM | 117.80 | 117.84 | Rs -4 | TIME_EXIT |
| 30 | SHORT | INTRADAY | NESTLEIND | 1456.80 | 1460.00 | Rs -26 | TIME_EXIT |
| 31 | SHORT | INTRADAY | HINDUNILVR | 2250.90 | 2247.60 | Rs +13 | TIME_EXIT |
| 32 | SHORT | INTRADAY | INFY | 1097.60 | 1094.60 | Rs +27 | TIME_EXIT |
| 33 | SHORT | INTRADAY | TIINDIA | 2807.50 | 2802.20 | Rs +16 | TIME_EXIT |
| 34 | SHORT | INTRADAY | PERSISTENT | 4660.40 | 4629.50 | Rs +31 | TIME_EXIT |
| 35 | SHORT | INTRADAY | IRFC | 100.43 | 100.21 | Rs +19 | TIME_EXIT |
| 36 | SHORT | INTRADAY | COALINDIA | 454.90 | 454.35 | Rs +9 | TIME_EXIT |
| 37 | LONG | SWING | OIL | 501.25 | 522.10 | Rs +417 | TARGET |
| 38 | LONG | SWING | HINDZINC | 672.40 | 672.95 | Rs +9 | SIGNAL_FLIP |
| 39 | LONG | SWING | NYKAA | 272.10 | 270.60 | Rs -69 | SIGNAL_FLIP |
| 40 | LONG | SWING | NATIONALUM | 419.30 | 414.10 | Rs -140 | SIGNAL_FLIP |
| 41 | LONG | SWING | ADANIENT | 2620.00 | 2671.00 | Rs +255 | STOPLOSS |
| 42 | LONG | SWING | MFSL | 1625.00 | 1632.20 | Rs +43 | SIGNAL_FLIP |
| 43 | LONG | SWING | VEDL | 333.80 | 338.00 | Rs +168 | STOPLOSS |
| 44 | LONG | SWING | APOLLOHOSP | 8054.00 | 8137.00 | Rs +249 | STOPLOSS |